// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-salarie > CCN HCR 1`] = `
"salarie . contrat . salaire brut: 2500
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 3313
salarie . rémunération . contrôle minimum: null
salarie . rémunération . net . payé après impôt: 1909
salarie . rémunération . net . à payer avant impôt: 1983

Notifications affichées : salarie . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarie > CCN batiment 1`] = `
"salarie . contrat . salaire brut: 2500
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 3674
salarie . rémunération . contrôle minimum: null
salarie . rémunération . net . payé après impôt: 1859
salarie . rémunération . net . à payer avant impôt: 1931

Notifications affichées : salarie . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarie > CCN batiment 2`] = `
"salarie . contrat . salaire brut: 2500
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 3656
salarie . rémunération . contrôle minimum: null
salarie . rémunération . net . payé après impôt: 1873
salarie . rémunération . net . à payer avant impôt: 1933

Notifications affichées : salarie . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarie > CCN batiment 3`] = `
"salarie . contrat . salaire brut: 2500
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 3707
salarie . rémunération . contrôle minimum: null
salarie . rémunération . net . payé après impôt: 1875
salarie . rémunération . net . à payer avant impôt: 1949

Notifications affichées : salarie . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarie > CCN compta 1`] = `
"salarie . contrat . salaire brut: 2500
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 3198
salarie . rémunération . contrôle minimum: null
salarie . rémunération . net . payé après impôt: 1947
salarie . rémunération . net . à payer avant impôt: 2006

Notifications affichées : salarie . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarie > CCN optique 1`] = `
"salarie . contrat . salaire brut: 2500
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 3373
salarie . rémunération . contrôle minimum: null
salarie . rémunération . net . payé après impôt: 1982
salarie . rémunération . net . à payer avant impôt: 2058

Notifications affichées : salarie . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarie > CCN spectacle vivant 1`] = `
"salarie . contrat . salaire brut: 2500
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 3629
salarie . rémunération . contrôle minimum: null
salarie . rémunération . net . payé après impôt: 2065
salarie . rémunération . net . à payer avant impôt: 2155

Notifications affichées : salarie . convention collective . avertissement convention collective, salarie . contrat . CDD . information"
`;

exports[`calculate simulations-salarie > CCN sport 1`] = `
"salarie . contrat . salaire brut: 500
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 913
salarie . rémunération . contrôle minimum: true
salarie . rémunération . net . payé après impôt: 592
salarie . rémunération . net . à payer avant impôt: 592

Notifications affichées : salarie . convention collective . avertissement convention collective, salarie . rémunération . contrôle minimum . smic"
`;

exports[`calculate simulations-salarie > CCN sport 2`] = `
"salarie . contrat . salaire brut: 1800
salarie . contrat . salaire brut . équivalent temps plein: null
salarie . coût total employeur: 1868
salarie . rémunération . contrôle minimum: true
salarie . rémunération . net . payé après impôt: 1399
salarie . rémunération . net . à payer avant impôt: 1399

Notifications affichées : salarie . convention collective . avertissement convention collective, salarie . rémunération . contrôle minimum . smic"
`;
